// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip snapshots inactive + active: chip-active 1`] = `
<View
  className="bg-surface rounded-full"
  style={
    [
      {
        "shadowColor": "#FFFFFF",
        "shadowOffset": {
          "height": 2,
          "width": 2,
        },
        "shadowOpacity": 1,
        "shadowRadius": 4,
      },
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        undefined,
      ],
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "borderRadius": 999,
        },
        {
          "shadowColor": "#BFBFBF",
          "shadowOffset": {
            "height": -2,
            "width": -2,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    style={
      {
        "color": "#1C1C1E",
        "fontSize": 14,
        "fontWeight": "600",
      }
    }
  >
    tag
  </Text>
</View>
`;

exports[`Chip snapshots inactive + active: chip-inactive 1`] = `
<View
  className="bg-surface rounded-full"
  style={
    [
      {
        "shadowColor": "#BFBFBF",
        "shadowOffset": {
          "height": 2,
          "width": 2,
        },
        "shadowOpacity": 1,
        "shadowRadius": 4,
      },
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 6,
        },
        undefined,
      ],
    ]
  }
>
  <View
    pointerEvents="none"
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "borderRadius": 999,
        },
        {
          "shadowColor": "#FFFFFF",
          "shadowOffset": {
            "height": -2,
            "width": -2,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    style={
      {
        "color": "#1C1C1E",
        "fontSize": 14,
        "fontWeight": "500",
      }
    }
  >
    tag
  </Text>
</View>
`;
